feat: added OtacilioN/Brasilino to oss projects list

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -13,6 +13,7 @@ Developer Productivity & Tools:
   - ellisonleao/magictools
   - go-task/task
   - dracula/dracula-theme
+  - OtacilioN/Brasilino
 
 Observability:
   - badtuxx/giropops-monitoring
