--- a/website/data/open-source/maintainers.yml
+++ b/website/data/open-source/maintainers.yml
@@ -20,7 +20,10 @@ Rio de Janeiro:
   
 Três Coroas - RS:
   - rodrigok
-  
+
+Florianópolis - SC:
+  - eminetto
+
 Other States: 
   - josevalim
   - zenorocha
