[Pull Request] Maintainers + Projects + README Fixed

--- a/website/data/open-source/maintainers.yml
+++ b/website/data/open-source/maintainers.yml
@@ -1,34 +1,35 @@
 ---
 Brasilia:
   - cezarsa
-  
+
 Curitiba:
   - ellisonleao
- 
+
 São Paulo:
   - avelino
   - felipefialho
   - iuricode
-  
+  - yagasaki7k
+
 Joinville:
   - andreynering
-  
+
 Porto Alegre:
   - hishamhm
 
 Rio de Janeiro:
   - roberto-ieru
-  
+
 Três Coroas - RS:
   - rodrigok
 
 Florianópolis - SC:
   - eminetto
 
-Other States: 
+Other States:
   - josevalim
   - zenorocha
-  - camilamaia 
+  - camilamaia
   - erikaheidi
   - badtuxx
   - caarlos0
