[Pull Request] Projects

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -16,6 +16,7 @@ Developer Productivity & Tools:
   - OtacilioN/Brasilino
   - brazilian-utils/brazilian-utils
   - yagasaki7k/website-essentials
+  - yagasaki7k/website-runinlinux
 
 Observability:
   - badtuxx/giropops-monitoring
@@ -51,6 +52,3 @@ Consumer Software:
 
 Software Testing:
   - scanapi/scanapi
-
-Games:
-  - yagasaki7k/runinlinux
