Update projects.yml (add react-ape)

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -15,6 +15,7 @@ Developer Productivity & Tools:
   - dracula/dracula-theme
   - OtacilioN/Brasilino
   - brazilian-utils/brazilian-utils
+  - raphamorim/react-ape
 
 Observability:
   - badtuxx/giropops-monitoring
