--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -48,6 +48,7 @@ Consumer Software:
   - maykbrito/mini-video-me
   - clappr/clappr
   - devhubapp/devhub
+  - raphamorim/rio
 
 Software Testing:
   - scanapi/scanapi
