--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -16,6 +16,7 @@ Developer Productivity & Tools:
   - OtacilioN/Brasilino
   - brazilian-utils/brazilian-utils
   - raphamorim/react-ape
+  - avelino/awesome-go
 
 Observability:
   - badtuxx/giropops-monitoring
