--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -33,6 +33,7 @@ Learning & Education:
   - badtuxx/DescomplicandoDocker
   - Universidade-Livre/ciencia-da-computacao
   - felipefialho/frontend-challenges
+  - flaviojmendes/trilhainfo
 
 UI/UX:
   - milligram/milligram
