--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -44,6 +44,7 @@ Data Science & Engineering:
 Business Software:
   - tsuru/tsuru
   - RocketChat/Rocket.Chat
+  - RocketChat/Rocket.Chat.ReactNative
 
 Consumer Software:
   - maykbrito/mini-video-me
