--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -18,6 +18,7 @@ Developer Productivity & Tools:
   - shellhub-io/shellhub
   - raphamorim/react-ape
   - avelino/awesome-go
+  - ujizin/camposer
 
 Observability:
   - badtuxx/giropops-monitoring
