Update projects.yml, add node-chromedriver

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -40,6 +40,9 @@ Observability:
 Frameworks:
   - expressots/expressots
 
+Libraries:
+  - giggio/node-chromedriver 
+
 GitHub Power-Ups:
   - iuricode/readme-template
   
