feat: Adds new maintainer and open-source projects. Fixes duplicate keys in projects.yml.

--- a/website/data/open-source/maintainers.yml
+++ b/website/data/open-source/maintainers.yml
@@ -16,7 +16,6 @@ São Paulo:
   - rsaz
   - vinijmoura
 
-
 Joinville:
   - andreynering
 
@@ -49,4 +48,4 @@ Other States:
   - rochacbruno
   - jonatas
   - filipedeschamps
-  
+  - gustavofreze
