--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ bin-release/
 *.ipa
 *.apk
 
+# IDEAs
+.idea
+
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
