Add two projects
- OtacilioN/awesome-hacktoberfest
- ReciHub/FunnyAlgorithms

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -64,6 +64,8 @@ Learning & Education:
   - Universidade-Livre/ciencia-da-computacao
   - felipefialho/frontend-challenges
   - flaviojmendes/trilhainfo
+  - OtacilioN/awesome-hacktoberfest
+  - ReciHub/FunnyAlgorithms
   
 Machine Learning:
   - nubank/fklearn
