--- a/website/data/open-source/maintainers.yml
+++ b/website/data/open-source/maintainers.yml
@@ -2,8 +2,9 @@
 Brasilia:
   - cezarsa
 
-Curitiba:
+Paraná:
   - ellisonleao
+  - RenanTashiro
 
 São Paulo:
   - avelino
@@ -15,7 +16,6 @@ São Paulo:
   - giggio
   - rsaz
   - vinijmoura
-
 
 Joinville:
   - andreynering
