Add  a project template for Django and VueJS

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -90,3 +90,6 @@ Security & Privacy:
 
 Azure DevOps Tools:
   - vinijmoura/Azure-DevOps
+
+Project Templates & Quick development:
+  - evolutio/djavue3
