add some brazilian k8s maintainers

--- a/website/data/open-source/maintainers.yml
+++ b/website/data/open-source/maintainers.yml
@@ -16,6 +16,7 @@ São Paulo:
   - giggio
   - rsaz
   - vinijmoura
+  - rikatz
 
 Joinville:
   - andreynering
@@ -39,6 +40,7 @@ Igrejinha - RS:
 
 Florianópolis - SC:
   - eminetto
+  - knabben
 
 Palmas - TO:
   - luzfcb
@@ -56,3 +58,5 @@ Other States:
   - jonatas
   - filipedeschamps
   - gustavofreze
+  - cpanato
+  - stormqueen1990
