Add kubepug to projects

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -39,6 +39,7 @@ Developer Productivity & Tools:
   - undistro/cel-playground
   - backend-br/vagas
   - backend-br/desafios
+  - rikatz/kubepug
 
 Observability:
   - badtuxx/giropops-monitoring
