--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -54,6 +54,7 @@ Frameworks:
 
 Libraries:
   - giggio/node-chromedriver
+  - ErickSimoes/Ultrasonic
 
 GitHub Power-Ups:
   - iuricode/readme-template
