--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -39,6 +39,8 @@ Developer Productivity & Tools:
   - undistro/cel-playground
   - backend-br/vagas
   - backend-br/desafios
+  - daltonmenezes/aura-theme
+  - daltonmenezes/electron-app
 
 Observability:
   - badtuxx/giropops-monitoring
@@ -54,6 +56,8 @@ Frameworks:
 
 Libraries:
   - giggio/node-chromedriver
+  - daltonmenezes/interprocess
+  - daltonmenezes/use-exit-intent
 
 GitHub Power-Ups:
   - iuricode/readme-template
