add my own projects

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -58,6 +58,8 @@ Frameworks:
 Libraries:
   - giggio/node-chromedriver
   - ErickSimoes/Ultrasonic
+  - leandromoreira/redlock-rb
+  - globocom/m3u8
 
 
 GitHub Power-Ups:
@@ -74,6 +76,9 @@ Learning & Education:
   - gustavofreze/kotlin4noobs
   - OtacilioN/awesome-hacktoberfest
   - ReciHub/FunnyAlgorithms
+  - leandromoreira/digital_video_introduction
+  - leandromoreira/cdn-up-and-running
+  - leandromoreira/linux-network-performance-parameters
   
 Machine Learning:
   - nubank/fklearn
