--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -86,6 +86,8 @@ Security & Privacy:
   - htrgouvea/nipe
   - undistro/zora
   - halencarjunior/BugBuntu
+  - pedropamn/SimpleCrypt
+
 
 Azure DevOps Tools:
   - vinijmoura/Azure-DevOps
