add pynfe to projects.yml

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -38,6 +38,7 @@ Developer Productivity & Tools:
   - daltonmenezes/aura-theme
   - daltonmenezes/electron-app
   - rikatz/kubepug
+  - TadaSoftware/PyNFe
 
 Observability:
   - badtuxx/giropops-monitoring
