add zio-quill to projects

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -57,6 +57,7 @@ Libraries:
   - ErickSimoes/Ultrasonic
   - leandromoreira/redlock-rb
   - globocom/m3u8
+  - zio/zio-quill
 
 GitHub Power-Ups:
   - iuricode/readme-template
