docs: adds ericdallo & clojure-lsp

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -39,6 +39,7 @@ Developer Productivity & Tools:
   - daltonmenezes/electron-app
   - rikatz/kubepug
   - TadaSoftware/PyNFe
+  - clojure-lsp/clojure-lsp
 
 Observability:
   - badtuxx/giropops-monitoring
