add a new framework open source to develop automations with python

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -52,6 +52,7 @@ Observability:
 
 Frameworks:
   - expressots/expressots
+  - botcity-dev/botcity-framework-core-python
 
 Libraries:
   - giggio/node-chromedriver
