add a project that is a tech dictionary build by the community

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -79,6 +79,7 @@ Learning & Education:
   - leandromoreira/digital_video_introduction
   - leandromoreira/cdn-up-and-running
   - leandromoreira/linux-network-performance-parameters
+  - levxyca/diciotech
 
 Machine Learning:
   - nubank/fklearn
