Add a project to create a K8s cluster on Oracle

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -41,6 +41,9 @@ Developer Productivity & Tools:
   - TadaSoftware/PyNFe
   - clojure-lsp/clojure-lsp
 
+DevOps:
+  - rapha-borges/oke-free
+
 Observability:
   - badtuxx/giropops-monitoring
 
