--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -62,6 +62,7 @@ Libraries:
   - zio/zio-quill
   - brazilian-utils/brutils-python
   - fazedordecodigo/pyflunt
+  - andrebaltieri/Flunt
 
 GitHub Power-Ups:
   - iuricode/readme-template
