update kubepug new org
Signed-off-by: cpanato <ctadeu@gmail.com>

--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -37,7 +37,7 @@ Developer Productivity & Tools:
   - backend-br/desafios
   - daltonmenezes/aura-theme
   - daltonmenezes/electron-app
-  - rikatz/kubepug
+  - kubepug/kubepug
   - TadaSoftware/PyNFe
   - clojure-lsp/clojure-lsp
 
