--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -40,6 +40,7 @@ Developer Productivity & Tools:
   - kubepug/kubepug
   - TadaSoftware/PyNFe
   - clojure-lsp/clojure-lsp
+  - vsouza/docker-SQS-local
 
 DevOps:
   - rapha-borges/oke-free
@@ -105,3 +106,6 @@ Security & Privacy:
 
 Azure DevOps Tools:
   - vinijmoura/Azure-DevOps
+
+Awesome Lists:
+  - vsouza/awesome-ios
