--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -69,6 +69,7 @@ Libraries:
   - andrebaltieri/Flunt
   - arthurfiorette/axios-cache-interceptor
   - kitajs/html
+  - ivdatahub/api-to-dataframe
 
 GitHub Power-Ups:
   - iuricode/readme-template
