--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -12,6 +12,7 @@ Consumer Software:
 
 Data Science & Engineering:
   - BrasilAPI/BrasilAPI
+  - zecruel/CadZinho
 
 Developer Productivity & Tools:
   - editor-bootstrap/vim-bootstrap
