chore: update permissions for actions workflows

--- a/.github/workflows/trigger-deploy-on-comment.yml
+++ b/.github/workflows/trigger-deploy-on-comment.yml
@@ -2,6 +2,7 @@ name: Trigger deploy on comment
 on:
   issue_comment:
     types: [created]
+permissions: read-all
 jobs:
   if_merged:
     if: github.event.issue.pull_request && contains(github.event.comment.body, '/deploy')
