--- a/website/data/open-source/maintainers.yml
+++ b/website/data/open-source/maintainers.yml
@@ -24,13 +24,10 @@ São Paulo:
   - rikatz
   - ericdallo
   - andrebaltieri
-
-Sumaré - SP:
   - abehidek
   - viniciusventura29
 
-Joinville:
-  - andreynering
+
 
 Paraíba:
   - OtacilioN
@@ -38,9 +35,13 @@ Paraíba:
 Pernambuco:
   - ErickSimoes
 
-Porto Alegre:
+Rio Grande do Sul:
   - hishamhm
   - cpanato
+  - rodrigok
+  - diegolmello
+  - fabriziomello
+
 
 Rio de Janeiro:
   - roberto-ieru
@@ -53,26 +54,22 @@ Espirito Santo:
 Mato Grosso:
   - leogregianin
 
-Três Coroas - RS:
-  - rodrigok
 
-Igrejinha - RS:
-  - diegolmello
-
-Florianópolis - SC:
+ 
+Santa Catarina:
   - eminetto
   - knabben
+  - andreynering
 
-Palmas - TO:
+Tocantins:
   - luzfcb
 
-Bagé - RS:
-  - fabriziomello
+
 
 Minas Gerais:
   - zecruel
 
-Other States:
+Fora do Brasil:
   - josevalim
   - zenorocha
   - camilamaia
