Add Camilo and Mateus from Universidade Brasileira Livre

--- a/website/data/open-source/maintainers.yml
+++ b/website/data/open-source/maintainers.yml
@@ -2,6 +2,9 @@
 Bahia:
   - daltonmenezes
 
+Bento Gonçalves - RS:
+  - Camilotk
+
 Brasilia:
   - cezarsa
 
@@ -31,6 +34,9 @@ Sumaré - SP:
 
 Joinville:
   - andreynering
+
+Lajeado - RS:
+  - mateusrovedaa
 
 Paraíba:
   - OtacilioN
