--- a/website/data/open-source/maintainers.yml
+++ b/website/data/open-source/maintainers.yml
@@ -3,49 +3,45 @@ Acre:
 
 Alagoas:
 
-
-
 Bahia:
   - daltonmenezes
 
 Brasilia:
 
-Ceará: 
-
-
+Ceará:
 
 Distrito Federal:
-
   - cezarsa
 
 Espírito Santo:
-- fazedordecodigo
+  - fazedordecodigo
 
-Goiás: 
+Goiás:
 
 Maranhão:
 
 Mato Grosso:
- - leogregianin
- 
+  - leogregianin
+
 Mato Grosso do Sul:
+
 Minas Gerais:
   - zecruel
-  
+
 Pará:
 
 Paraíba:
   - OtacilioN
-  
+
 Paraná:
   - ellisonleao
   - RenanTashiro
   - guiseek
   - MauricioFauth
-  
+
 Pernambuco:
   - ErickSimoes
-  
+
 Piauí:
 
 Rio de Janeiro:
@@ -63,8 +59,9 @@ Rio Grande do Sul:
   - cpanato
   - Camilotk
   - mateusrovedaa
-  
+
 Rondônia:
+
 Roraima:
 
 Santa Catarina:
@@ -72,7 +69,6 @@ Santa Catarina:
   - eminetto
   - knabben
 
-  
 São Paulo:
   - avelino
   - felipefialho
@@ -90,33 +86,12 @@ São Paulo:
   - abehidek
   - viniciusventura29
 
-
 Joinville:
   - andreynering
-
-
-  
-
-Paraíba:
-  - OtacilioN
-
-Pernambuco:
-  - ErickSimoes
 
 Porto Alegre:
   - hishamhm
   - cpanato
-
-Rio de Janeiro:
-  - roberto-ieru
-  - raphamorim
-  - heynemann
-
-Espirito Santo:
-  - fazedordecodigo
-
-Mato Grosso:
-  - leogregianin
 
 Três Coroas - RS:
   - rodrigok
@@ -130,11 +105,10 @@ Florianópolis - SC:
 
 Palmas - TO:
 
-  
 Sergipe:
-Tocantins:
-  - luzfcb
 
+Tocantins:
+  - luzfc
 
 Morando fora do Brasil:
   - josevalim
