--- a/website/data/open-source/maintainers.yml
+++ b/website/data/open-source/maintainers.yml
@@ -63,7 +63,7 @@ Florianópolis - SC:
   - eminetto
   - knabben
 Tocantins:
-  - luzfc
+  - luzfcb
 Morando fora do Brasil:
   - josevalim
   - zenorocha
