Comment out Rondônia and Roraima sections

--- a/website/data/open-source/maintainers.yml
+++ b/website/data/open-source/maintainers.yml
@@ -31,8 +31,8 @@ Rio Grande do Sul:
   - Camilotk
   - mateusrovedaa
   - igorvinoski
-Rondônia:
-Roraima:
+# Rondônia: 
+# Roraima:
 Santa Catarina:
   - andreynering
   - eminetto
