--- a/website/data/open-source/projects.yml
+++ b/website/data/open-source/projects.yml
@@ -72,6 +72,7 @@ Libraries:
 
 GitHub Power-Ups:
   - iuricode/readme-template
+  - george-gca/multi-language-al-folio
 
 Learning & Education:
   - leandromoreira/ffmpeg-libav-tutorial
